// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create new custom measure 1`] = `
<Fragment>
  <Button
    id="custom-measures-create"
    onClick={[Function]}
  >
    create
  </Button>
</Fragment>
`;

exports[`should create new custom measure 2`] = `
<Fragment>
  <Button
    id="custom-measures-create"
    onClick={[Function]}
  >
    create
  </Button>
  <Form
    confirmButtonText="create"
    header="custom_measures.create_custom_measure"
    onClose={[Function]}
    onSubmit={[MockFunction]}
    skipMetrics={Array []}
  />
</Fragment>
`;
